--- a/Bikeroo/Bikeroo.csproj
+++ b/Bikeroo/Bikeroo.csproj
@@ -18,6 +18,9 @@
     <None Update="database.sqlite">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="schema.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
