--- a/Bikeroo/Bikeroo.csproj
+++ b/Bikeroo/Bikeroo.csproj
@@ -15,6 +15,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="klient.cs">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="database.sqlite">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
