--- a/Bikeroo/Bikeroo.csproj
+++ b/Bikeroo/Bikeroo.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="database.sql">
+    <None Update="database.sqlite">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="schema.sql">
